--- a/.github/workflows/slx_diff.yml
+++ b/.github/workflows/slx_diff.yml
@@ -1,29 +1,41 @@
-
 name: Compare Simulink Versions
 
 on:
   push:
     paths:
-      - 'projects/ExampleProject/versions/*.slx'
+      - 'projects/**/versions/*.slx'
+      - 'tracker/slx_diff.py'
 
 jobs:
   compare:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install scipy h5py
 
       - name: Run block comparison
-        run: python3 tracker/slx_diff.py
+        run: python tracker/slx_diff.py
 
       - name: Commit updated change_log.txt
         run: |
           git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add projects/ExampleProject/change_log.txt
+          git config user.email "actions@github.com"
+          git add projects/*/change_log.txt
           git commit -m "Update change log" || echo "No changes to commit"
+          git remote set-url origin https://x-access-token:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}
           git push
+        env:
+          GIT_AUTHOR_NAME: github-actions
+          GIT_AUTHOR_EMAIL: actions@github.com
+          GIT_COMMITTER_NAME: github-actions
+          GIT_COMMITTER_EMAIL: actions@github.com
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
