--- a/.github/workflows/slx_diff.yml
+++ b/.github/workflows/slx_diff.yml
@@ -31,8 +31,8 @@ jobs:
           git config user.email "actions@github.com"
           git add projects/*/change_log.txt
           git commit -m "Update change log" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }}
-          git push
+          git push https://x-access-token:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+
         env:
           GIT_AUTHOR_NAME: github-actions
           GIT_AUTHOR_EMAIL: actions@github.com
