--- a/.github/workflows/slx_diff.yml
+++ b/.github/workflows/slx_diff.yml
@@ -31,4 +31,4 @@ jobs:
           git config user.email "actions@github.com"
           git add projects/*/change_log.txt
           git commit -m "Update change log" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }} HEAD:main
